Mon Dec 21 21:42:37 UTC 2009  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.cpp:

          Publish DP reports after a create_topic() call.

        * dds/DCPS/transport/framework/TransportFactory.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.cpp:
        * dds/monitor/TransportMonitorImpl.h:
        * dds/monitor/TransportMonitorImpl.cpp:
        * tests/DCPS/Monitor/SPMDataReaderListener.cpp:

          Queue transports so they are published when initialization
          is completed.

        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          Move the findKey() implementation to the .inl file (to
          fix some template instantiation issues).

Mon Dec 21 16:14:27 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * tools/odds_monitor/MonitorDataStorage.h:
        * tools/odds_monitor/MonitorDataStorage.inl:
        * tools/odds_monitor/MonitorDataStorage.cpp:

          Factored Qos node management int separate method.

          Initial implementation for Topic, Publication, and Subscription
          update processing.

        * tools/odds_monitor/QosFormatter.cpp:

          Added specialization for QString parameter to simplify calling
          code.

Sun Dec 20 22:59:31 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastTransport.cpp:
        * dds/DCPS/transport/multicast/ReliableMulticast.cpp:
        * dds/DCPS/transport/udp/UdpTransport.cpp:

          Corrected ref counting behavior; fixed test failures in FooTest5_0.

        * dds/DCPS/transport/udp/UdpDataLink.h:

          Added missing include; fixed compilation failures on Win32 hosts.

        * tests/DCPS/FooTest5/common.cpp:
        * tests/DCPS/Priority/transport.ini:
        * tests/DCPS/Priority/transport_solaris.ini:
